2004-12-20  Andreas Madsack  <bolsog@users.sf.net>

	* beta4 released
	
	* last bugfixes

2004-12-19  Andreas Madsack  <bolsog@users.sf.net>

	* fixed a few win32-bugs
	* fixed unicode-problems with pango
	* now using gtk2.4 buttons for fonts and colors
	
2004-12-16  Andreas Madsack  <bolsog@users.sf.net>

	* improved FileOpenDialog (added filter: all files, par files)
	* improved FileSaveDialog (added pre-entry, added filetype)
	  -> SaveAs is now used for par- and wav-files!

2004-12-13  Andreas Madsack  <bolsog@users.sf.net>

	* realize problem fixed, using temp. config-entries.
	  [when preferences tab was not selected, wrong info were saved.]

2004-12-08  Andreas Madsack  <bolsog@users.sf.net>

	* translation corrections (de.po)
	* optimize: is(x)digit-usage (char(hex) -> int)
	* enable using Scrollwheel to switch mode
	* code optimizes

2004-12-07  Andreas Madsack  <bolsog@users.sf.net>

	* better solution for eliminating tokens in strings
	* generalizing of eventroutines

2004-12-04  Andreas Madsack  <bolsog@users.sf.net>

	* beta3 released
	
	* Font is now chooseable in preferences
	* program-quit-question-dialog can be disabled :)
	* changed minimum-check for gtk from 2.0 to 2.4
	* fixes for win32 (find pixmaps and locale)
	* more win32 fixes (in cfg, loadconf, ...)
	
2004-12-02  Andreas Madsack  <bolsog@users.sf.net>

	* code-optimize, introduced setcolorlabel / now setting
   	  preferences colors after apply/ok in gui, too
	* set default values if argv[1] is not an parfile
	* introducing Error/Info/YesNo-Dialog-Procedures
	* added MessageDialogs at program-quit, file-was-changed
	* introduced GTK2.4 File-Selector-Dialogs for open and save.
	* updated german (de.po) translations

2004-11-30  Andreas Madsack  <bolsog@users.sf.net>

	* middle mousebutton now inserts a new point
	* disabled possibility to delete first and last point on curve.
	* a few design changes in preferences
	* added defaults-button in preferences
